# Ihy

./: .dockerignore  .gitattributes  .gitignore  README.md  package-lock.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 13e3131aa4a5_smart_playlists_and_scrobble_configs.py  1d714ac06414_track_ratings.py  22c1644bbcf4_artist_info.py  4bdc0376570e_download_fixes.py  7a3843ac28d7_track_replay_gain.py  7ed11bc44749_initial_schema.py  87d8b3ef83aa_bookmarks.py  9890b1f26d91_lyrics_cache.py  99fd74eab5f8_download_watches.py  b1f89597ab66_user_subsonic_token.py  bd91737c6d9e_radio_stations.py  dbfee3b7efb9_user_names.py  ef57d56cc4b6_saved_queues.py  f284db053013_track_artists_many_to_many_and_app_.py
backend/app/: main.py
backend/app/api/: deps.py  subsonic.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  app_setting.py  artist_info.py  downloads.py  interactions.py  library.py  lyrics.py  playlist.py  queues.py  radio.py  scrobble.py  smart_playlist.py  user.py
backend/app/schemas/: auth.py  backup.py  bookmarks.py  downloads.py  history.py  library.py  lyrics.py  playlist.py  queues.py  scan.py  settings.py  source.py  stats.py  tags.py  user.py
backend/app/services/: app_settings.py  artist_images.py  artist_info.py  backup.py  browse.py  catalog.py  covers.py  daily_mixes.py  downloads.py  images.py  library_editor.py  library_health.py  loudness.py  lyrics.py  musicbrainz.py  playlist_files.py  queues.py  scan_manager.py  scanner.py  scrobbler.py  smart_playlists.py  sources.py  spotify.py  spotify_import.py  stats.py  tag_editor.py  tag_reader.py  transcoder.py  user_library.py  (+2 more)
backend/tests/: conftest.py  test_artist_images.py  test_auth.py  test_backup_api.py  test_catalog_api.py  test_discover_api.py  test_downloads_api.py  test_group_c_api.py  test_health.py  test_library_editor_api.py  test_library_health.py  test_lyrics_api.py  test_media_api.py  test_models.py  test_queues_api.py  test_scan_api.py  test_scanner.py  test_security.py  test_settings_api.py  test_sources_api.py  test_static_spa.py  test_subsonic_api.py  test_tag_editor_api.py  test_user_library_api.py  test_users.py  test_wave2_api.py  test_wave3_api.py  test_wave4_api.py  test_wave5_api.py  test_wave_d_api.py  test_waveforms.py  utils.py
(+130 files in other folders)
