[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ihy-backend"
version = "0.1.0"
description = "Backend API for Ihy, a self-hosted music streaming and library management application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "mutagen>=1.47",
    "pillow>=11.0",
    "pyjwt>=2.10",
    "argon2-cffi>=23.1",
    "apscheduler>=3.10,<4",
    "python-multipart>=0.0.12",
    "email-validator>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
